# generative-ai-implementations

./: .gitignore
langchain/agent/: pyproject.toml  requirements.txt
langchain/agent/agent-basics/: middleware.ipynb  stream-and-batch.ipynb  tools.ipynb
langchain/agent/agents/: langchain-built-in-tools.ipynb  messages.ipynb  middleware.ipynb  structured-output.ipynb
langchain/agent/agents-langchain/: agent-intro.ipynb  model-integration.ipynb
langchain/conversation-history/: chat-flow.ipynb  conversational-chatbot-history-aware-retriever.ipynb
langchain/langchain-outdated/: pyproject.toml  requirements.txt
langchain/langchain-outdated/conversation-history/: conversational-chatbot-LCEL.ipynb
langchain/langchain-outdated/llm-integrations/huggingface/: huggingface-integration.ipynb
langchain/langchain-outdated/llm-integrations/nvedia-nim/: docs-qa-nim.py
langchain/langchain-outdated/text-summarization/: text-summarization.ipynb
langchain/langchain-updated/: pyproject.toml  requirements.txt
langchain/langchain-updated/agents-langchain/: langchain-built-in-tools.ipynb
langchain/langchain-updated/agents-langgraph/: basic-chatbot.ipynb  chatbot-with-tools.ipynb  human-in-loop.ipynb
langchain/langchain-updated/agents-langgraph/debugging/: agent.py  debugging.ipynb  langgraph.json
langchain/langchain-updated/agents-langgraph/model-context-protocol/: client.py  math-server.py  weather-server.py
langchain/langchain-updated/agents-langgraph/multi-agent-architecture/: simple-multi-agent.ipynb  supervisor-multi-agent.ipynb
langchain/langchain-updated/rag-adv-search/: hybrid-search.ipynb
langchain/langchain-updated/rag/graph-database/: prompt-strategies.ipynb  qa_neo4j.ipynb
langchain/langchain-updated/rag/qa-using-lcel/: qa_doc.py
langchain/rag/: pyproject.toml
langchain/rag/conversation-history/: message-history.ipynb  vectorstore-retriever.ipynb
