[project]
name = "langchain-updated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langserve>=0.3.3",
    "langsmith>=0.9.7",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
    "uvicorn>=0.50.0",
    "wikipedia>=1.4.0",
]
