[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "huggingface-hub>=1.23.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langserve>=0.3.3",
    "langsmith>=0.10.5",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "streamlit>=1.59.2",
    "torchvision>=0.28.0",
    "transformers>=5.13.1",
    "uvicorn>=0.51.0",
    "wikipedia>=1.4.0",
]
