[project]
name = "langchain-updated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-neo4j>=0.10.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langgraph-api>=0.11.1",
    "langgraph-cli>=0.4.31",
    "langserve>=0.3.3",
    "langsmith>=0.9.7",
    "mcp>=1.28.1",
    "neo4j>=6.2.0",
    "pinecone>=7.3.0",
    "pinecone-text>=0.11.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
    "uvicorn>=0.50.0",
    "wikipedia>=1.4.0",
]
